<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">



    <group android:checkableBehavior="single">

        <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@mipmap/home"/>

        <item
        android:id="@+id/nav_experiences"
        android:title="Best Trips"
        android:icon="@mipmap/equipment"/>

        <item
            android:id="@+id/nav_saved"
            android:title="@string/saved"
            android:icon="@mipmap/saved"/>


        <item
            android:id="@+id/nav_user_profile"
            android:title="@string/user_profile"
            android:icon="@drawable/user_profile"/>

        <item
            android:id="@+id/nav_logout"
            android:title="@string/logout"
            android:checkable="false"
            android:icon="@mipmap/exit"/>
    </group>
</menu>
