<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".Fragments.HomeFragment"
    tools:layout_editor_absoluteY="25dp">


    <AutoCompleteTextView
        android:id="@+id/home_search_textview"
        android:layout_width="255dp"
        android:layout_height="41dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/where_to"
        android:inputType="text"
        android:lines="1"
        android:maxLength="20"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"/>
        <!-->app:layout_constraintTop_toBottomOf="@+id/home_viewpager" /><!-->

    <Button
        android:id="@+id/homeserach_button"
        android:layout_width="133dp"
        android:layout_height="0dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="148dp"
        android:background="#ffe799"
        android:text="@string/search"
        android:textColor="@android:color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/home_search_textview" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="184dp"
        android:layout_height="31dp"
        android:layout_marginStart="112dp"
        android:layout_marginTop="18dp"
        android:gravity="center_horizontal"
        android:text="@string/popular_searches"
        android:textColor="#333300"
        android:textSize="18dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeserach_button" />

    <TextView
        android:id="@+id/recentSearch2"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:autoLink="all"
        android:gravity="center"
        android:linksClickable="true"
        android:textColor="#333300"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toEndOf="@+id/recentSearch1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/recentSearch1"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="12dp"
        android:autoLink="all"
        android:gravity="center"
        android:linksClickable="true"
        android:textColor="#333300"
        android:textStyle="italic|bold"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/recentSearch3"
        android:layout_width="100dp"
        android:layout_height="25dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="12dp"
        android:autoLink="all"
        android:gravity="center"
        android:linksClickable="true"
        android:textColor="#333300"
        android:textStyle="italic|bold"
        app:layout_constraintStart_toEndOf="@+id/recentSearch2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <!-->
    <android.support.v4.view.ViewPager
        android:id="@+id/home_viewpager"
        android:layout_width="wrap_content"
        android:layout_height="326dp"
        android:gravity="center_vertical"
        android:scaleType="fitXY"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
     <!-->
</android.support.constraint.ConstraintLayout>